unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/csmrgp__Record_Type_Detail__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Record Type Detail</label>
</CustomObject>