unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/fields/csmrgp__Active__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>