unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/fields/csmrgp__Automerge_Detection_Statuses_1__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerge_Detection_Statuses_1__c</fullName>
    <description>When Perform_Automerge_Detection__c is set to "Case Updates in Selected Statuses", this contains part of/the entire JSON string with the picklist values to use.</description>
    <label>Automerge Detection Statuses 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>