unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/fields/csmrgp__Automerge_Enabled__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Automerge_Enabled__c</fullName>
    <description>Is Automerge enabled for this record type detail? If so, what actions are taken.
        Valid values are:
            Disabled - Do nothing.
            Detection Only - Collects data, but nothing else.
            Detection with Automerge Indicator - Collects data and marks Case for automerge.
            Enabled - Automerges the Case.</description>
    <label>Automerge Enabled</label>
    <length>34</length>
    <type>Text</type>
</CustomField>