unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/fields/csmrgp__Perform_Automerge_Detection__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Perform_Automerge_Detection__c</fullName>
    <description>When should automerge be performed?
Valid values are:
     On Case Creation
     Case Updates in Selected Statuses - Whenever a Case is inserted or updated with statuses defined in the Automerge Detection Statuses fields.</description>
    <label>Perform Automerge Detection</label>
    <length>33</length>
    <type>Text</type>
</CustomField>