unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/fields/csmrgp__Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Record_Type_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Record Type ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>