unpackaged/main/default/objects/csmrgp__Record_Type_Detail__c/fields/csmrgp__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>